# python-template

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  git.rst  index.rst  introduction.rst  license-citation.rst  pyproject.rst  readme.rst  structure.rst  venv.rst
src/myproject/: __init__.py  __main__.py  core.py  differentiate.py  integrate.py
src/myproject/subpackage/: __init__.py  core.py
tests/: test_differentiate.py  test_integrate.py
