[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "First Last", email = "f.last@example.com"}
]
readme = "README.md"

requires-python = ">=3.11,<4"
license = {text = "BSD-2-Clause"}
dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


# Tools and packages to install to help with project development
# Not necessary for running the project
# '~=' x.y(.z) is a shortcut for '>= x.y(.z), <= x(.y)
# so that there is a minimum minor (bugfix) release,
# and a maximum major (minor) release.
[project.optional-dependencies]
dev = [
    "pytest ~= 8.2.0",
    "black ~= 24.4.0",
    "pylint ~= 3.1",
    "pyproject-flake8 ~= 7.0",
    "mypy ~= 1.9",
    "sphinx ~= 7.3",
    #"myst-parser ~= 2.0",  # when using Markdown with Sphinx
]

[tool.flake8]
# Match Black's line length
max-line-length = 88

[tool.pylint]
# Iterator variables and a few special names
good-names = "i, j, k, n, x, y, fp"
